# browser-agent-scheduler-back

./: .gitignore
backend/: Dockerfile  agente.py  docker-compose.yml  pyproject.toml  system_prompt.py
backend/app/: auth.py  config.py  dependencies.py  main.py
backend/app/external_services/: supabase.py
backend/app/internal/: admin.py
backend/app/routers/: tasks.py  users.py
backend/app/schemas/: tasks.py  user_api_keys.py  users.py
backend/app/services/: agent.py  celery.py
